# nanobot

./: CLAUDE.md  pyproject.toml
nanobot/agent/: loop.py  subagent.py
nanobot/agent/tools/: filesystem.py  shell.py  spawn.py  web.py
nanobot/channels/: feishu.py  telegram.py
nanobot/cli/: commands.py
nanobot/config/: loader.py  schema.py
nanobot/cron/: service.py
nanobot/heartbeat/: service.py
nanobot/providers/: litellm_provider.py  registry.py
nanobot/session/: manager.py
scripts/: build.sh  format.sh  lint.sh  setup.sh  test.sh
tests/: test_cli_input.py  test_email_channel.py
