[tool.poetry]
name = "nanobot-ai"
version = "0.1.3.post7"
description = "A lightweight personal AI assistant framework"
license = "MIT"
authors = ["nanobot contributors"]
keywords = ["ai", "agent", "chatbot"]
readme = "README.md"
packages = [{include = "nanobot"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.11"
typer = ">=0.9.0"
litellm = ">=1.0.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
websockets = ">=12.0"
websocket-client = ">=1.6.0"
httpx = {version = ">=0.25.0", extras = ["socks"]}
loguru = ">=0.7.0"
readability-lxml = ">=0.8.0"
rich = ">=13.0.0"
croniter = ">=2.0.0"
dingtalk-stream = ">=0.4.0"
python-telegram-bot = {version = ">=21.0", extras = ["socks"]}
lark-oapi = ">=1.0.0"
socksio = ">=1.0.0"
python-socketio = ">=5.11.0"
msgpack = ">=1.0.8"
slack-sdk = ">=3.26.0"
qq-botpy = ">=1.0.0"
python-socks = {version = ">=2.4.0", extras = ["asyncio"]}
prompt-toolkit = ">=3.0.0"
mcp = ">=1.0.0"
json-repair = ">=0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
ruff = ">=0.1.0"

[tool.poetry.scripts]
nanobot = "nanobot.cli.commands:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
